adjust settings, clean up, add license

--- a/action.yml
+++ b/action.yml
@@ -1,24 +1,21 @@
-name: 'The name of your action here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'Minecraft Modding Updater'
+description: 'Automatically update the dependencies whenever a new minecraft version is released'
+author: 'LucunJi'
 
-# Add your action's branding here. This will appear on the GitHub Marketplace.
 branding:
-  icon: 'heart'
-  color: 'red'
+  icon: 'chevrons-up'
+  color: 'yellow'
 
-# Define your inputs here.
-inputs:
-  milliseconds:
-    description: 'Your input description here'
-    required: true
-    default: '1000'
+# inputs:
+#   milliseconds:
+#     description: 'Your input description here'
+#     required: true
+#     default: '1000'
 
-# Define your outputs here.
-outputs:
-  time:
-    description: 'Your output description here'
+# outputs:
+#   time:
+#     description: 'Your output description here'
 
 runs:
-  using: node20
+  using: node21
   main: dist/index.js
