--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/core": "^1.10.1",
+    "escape-string-regexp": "^5.0.0",
+    "yaml": "^2.3.4"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
