--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node",
     "setup"
   ],
+  "type": "module",
   "exports": {
     ".": "./dist/index.js"
   },
@@ -68,11 +69,14 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "escape-string-regexp": "^5.0.0",
+    "fast-xml-parser": "^4.3.2",
+    "properties-parser": "^0.6.0",
     "yaml": "^2.3.4"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
+    "@types/properties-parser": "^0.3.3",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vercel/ncc": "^0.38.1",
@@ -86,6 +90,7 @@
     "prettier": "^3.1.1",
     "prettier-eslint": "^16.1.2",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
