--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "format:write": "prettier --write **/*.ts",
     "format:check": "prettier --check **/*.ts",
     "lint": "npx eslint . -c ./.github/linters/.eslintrc.yml",
+    "lint:fix": "npx eslint . -c ./.github/linters/.eslintrc.yml --fix",
     "package": "ncc build src/index.ts --license licenses.txt",
     "package:watch": "npm run package -- --watch",
     "test": "jest",
