--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "update",
     "dependency"
   ],
-  "type": "module",
   "exports": {
     ".": "./dist/index.js"
   },
@@ -71,9 +70,10 @@
       "./src/**"
     ]
   },
+  "//": "escape-string-regexp of 5.x.x uses ESM which is incompatible with CommonJS",
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "escape-string-regexp": "^5.0.0",
+    "escape-string-regexp": "^4.0.0",
     "fast-xml-parser": "^4.3.2",
     "properties-parser": "^0.6.0",
     "yaml": "^2.3.4"
