--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mc-depup",
-  "description": "Let's dep-up your mods! It automatically update the dependencies whenever a new minecraft version is released",
+  "description": "Let's dep-up your mods! It automatically updates Minecraft version and dependencies in your gradle.properties",
   "version": "0.0.1",
   "author": "LucunJi",
   "private": false,
-  "homepage": "https://github.com/LucunJi/mc-depup",
+  "homepage": "https://github.com/marketplace/actions/mc-depup",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LucunJi/mc-depup.git"
