--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   "//": "escape-string-regexp of 5.x.x uses ESM which is incompatible with CommonJS",
   "dependencies": {
     "@actions/core": "^1.10.1",
+    "compare-versions": "^6.1.0",
     "escape-string-regexp": "^4.0.0",
     "fast-xml-parser": "^4.3.2",
     "properties-parser": "^0.6.0",
