--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,8 @@ jobs:
       - name: Checkout
         id: checkout
         uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
 
       - name: Setup Node.js
         id: setup-node
@@ -40,6 +42,12 @@ jobs:
         id: npm-lint
         run: npm run lint
 
+      - name: Setup Test Environment
+        id: setup-test-env
+        run: |
+          cp './__tests__/assets/gradle.properties' './'
+          cp './__tests__/assets/modding-dependencies.yml' './.github/'
+
       - name: Test
         id: npm-ci-test
         run: npm run ci-test
@@ -57,8 +65,14 @@ jobs:
         id: test-action
         uses: ./
         with:
-          milliseconds: 2000
+          update_mc_patch: true
+          update_only_with_mc: false
+          tolerable: false
+
 
       - name: Print Output
         id: output
-        run: echo "${{ steps.test-action.outputs.time }}"
+        run: |
+          echo "${{ steps.test-action.outputs.any_update }}"
+          echo "${{ steps.test-action.outputs.summary }}"
+
