--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "typescript-action",
-  "description": "GitHub Actions TypeScript template",
-  "version": "0.0.0",
-  "author": "",
+  "name": "mc-depup",
+  "description": "Let's dep-up your mods! It automatically updates Minecraft version and dependencies in your gradle.properties",
+  "version": "0.0.1",
+  "author": "LucunJi",
   "type": "module",
-  "private": true,
-  "homepage": "https://github.com/actions/typescript-action",
+  "private": false,
+  "homepage": "https://github.com/marketplace/actions/mc-depup",
+  "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/LucunJi/mc-depup.git"
   },
   "bugs": {
-    "url": "https://github.com/actions/typescript-action/issues"
+    "url": "https://github.com/LucunJi/mc-depup/issues"
   },
   "keywords": [
-    "actions"
+    "github",
+    "minecraft",
+    "gradle",
+    "modding",
+    "update",
+    "dependency"
   ],
   "exports": {
     ".": "./dist/index.js"
@@ -29,15 +35,21 @@
     "format:write": "npx prettier --write .",
     "format:check": "npx prettier --check .",
     "lint": "npx eslint .",
+    "lint:fix": "npx eslint . --fix",
     "local-action": "npx @github/local-action . src/main.ts .env",
     "package": "npx rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "package:watch": "npm run package -- --watch",
     "test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 npx jest",
     "all": "npm run format:write && npm run lint && npm run test && npm run coverage && npm run package"
   },
-  "license": "MIT",
+  "//": "escape-string-regexp of 5.x.x uses ESM which is incompatible with CommonJS",
   "dependencies": {
-    "@actions/core": "^1.11.1"
+    "@actions/core": "^1.11.1",
+    "compare-versions": "^6.1.1",
+    "escape-string-regexp": "^5.0.0",
+    "fast-xml-parser": "^5.2.3",
+    "properties-parser": "^0.6.0",
+    "yaml": "^2.8.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.9",
